Fix focus traversal into BubbleDialogDelegateView

This change makes sure that:

* Focus traversal is enabled for BubbleDialogDelegateView instances that
  have their anchor view set in the constructor (before it's being added
  to a Widget).
* Focus traversal can continue from views with children into the
  anchored dialog if no focusable views are found within the dialog.
  Before this change you could only reverse-focus (shift-tab) into the
  anchored dialog (if it was anchored to a view that had child views).

This resolves focus traversal into at least the "Restore pages?" crash
dialog and "Extension X is disabled" dialogs, but the fixes are generic
and a class of dialogs should now be focus traversable as a result of
these two changes.

Bug: chromium:810601
Change-Id: Ia480a3039eb6d41480f4ef759d099fd9e88c33a7
Reviewed-on: https://chromium-review.googlesource.com/c/1297595
Commit-Queue: Peter Boström <pbos@chromium.org>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602568}
Former-commit-id: a29a6af4c1c58b81b9b033b25e36ddf5ce641021