ui/views/bubble/bubble_dialog_delegate_view.cc
@@ -164,6 +164,12 @@ const char* BubbleDialogDelegateView::GetClassName() const {
   return kViewClassName;
 }
 
+void BubbleDialogDelegateView::AddedToWidget() {
+  DialogDelegateView::AddedToWidget();
+  if (GetAnchorView())
+    EnableFocusTraversalFromAnchorView();
+}
+
 void BubbleDialogDelegateView::OnWidgetDestroying(Widget* widget) {
   if (anchor_widget() == widget)
     SetAnchorView(NULL);
@@ -268,6 +274,7 @@ void BubbleDialogDelegateView::OnAnchorBoundsChanged() {
 void BubbleDialogDelegateView::EnableFocusTraversalFromAnchorView() {
   DCHECK(GetWidget());
   DCHECK(GetAnchorView());
+  DCHECK(anchor_widget());
   GetWidget()->SetFocusTraversableParent(
       anchor_widget()->GetFocusTraversable());
   GetWidget()->SetFocusTraversableParentView(GetAnchorView());
@@ -342,8 +349,13 @@ void BubbleDialogDelegateView::OnNativeThemeChanged(
 void BubbleDialogDelegateView::Init() {}
 
 void BubbleDialogDelegateView::SetAnchorView(View* anchor_view) {
-  if (GetAnchorView())
+  if (GetAnchorView()) {
+    if (GetWidget()) {
+      GetWidget()->SetFocusTraversableParent(nullptr);
+      GetWidget()->SetFocusTraversableParentView(nullptr);
+    }
     GetAnchorView()->ClearProperty(kAnchoredDialogKey);
+  }
 
   // When the anchor view gets set the associated anchor widget might
   // change as well.
@@ -377,6 +389,8 @@ void BubbleDialogDelegateView::SetAnchorView(View* anchor_view) {
     // bounds when |anchor_view| is NULL, the bubble won't move.)
     OnAnchorBoundsChanged();
 
+    // Make sure that focus can move into here from the anchor view. If there's
+    // no widget yet, focus traversal will be set up in ::AddedToWidget().
     EnableFocusTraversalFromAnchorView();
   }
 }
